add example text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div class="hero-unit">
                 <h1>fuzzyset.js</h1>
-                <p>A fuzzy string set for javascript. A data structure that performs something akin to fulltext search against data to determine likely mispellings and approximate string matching.</p>
+                <p>A fuzzy string set for javascript. A data structure that performs something akin to fulltext search against data to determine likely mispellings and approximate string matching. Scroll down for an interactive example.</p>
                 <p><a class="btn btn-primary btn-large" href="https://github.com/Glench/fuzzyset.js">View and Download on Github &raquo;</a></p>
             </div>
 
