fix small typo on website

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ a.get("micael asiak");
             <div class="row">
                 <div class="span6">
                     <h2>Constructor Arguments</h2>
-                    <p>Methods to constructor function <code>FuzzySet()</code>.</p>
+                    <p>Arguments to constructor function <code>FuzzySet()</code>.</p>
                     <table class="table table-bordered">
                         <tr>
                             <th>Argument</th>
