--- a/viz/index.html
+++ b/viz/index.html
@@ -67,7 +67,7 @@
         <script src="react-with-addons.js" charset="utf-8"></script>
         <script src="react-dom.js" charset="utf-8"></script>
 
-        <script src="../../lib/fuzzyset.js" charset="utf-8"></script>
+        <script src="../lib/fuzzyset.js" charset="utf-8"></script>
 
         <script type="text/javascript">
         states = [
