new fuzzyset.js param

--- a/viz/index.html
+++ b/viz/index.html
@@ -131,7 +131,9 @@
         </script>
         <script type="text/javascript">
             $(document).on("ready", function(evt) {
-                fuzzyset = FuzzySet(['Glen Chiacchieri']);
+                fuzzyset = FuzzySet([
+                    'glen'
+                ]);
 
 
                 var _nonWordRe = /[^a-zA-Z0-9\u00C0-\u00FF, ]+/;
