--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ a.get("micael asiak");
                             <th>Description</th>
                         </tr>
                         <tr>
-                            <td>get(value, [default])</td>
+                            <td>get(value, [default], [minScore])</td>
                             <td>try to match a string to entries, otherwise return null or default if it is given.</td>
                         </tr>
                         <tr>
