--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ a.get("micael asiak");
                         </tr>
                         <tr>
                             <td>get(value, [default], [minScore])</td>
-                            <td>try to match a string to entries, otherwise return null or default if it is given.</td>
+                            <td>try to match a string to entries, otherwise return null or default if it is given. You can provide an optional score between 0 and 1 that results must be greater than.</td>
                         </tr>
                         <tr>
                             <td>add(value)</td>
